// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress widgets requirement control test Default (optional) 1`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger require-control-value require-control flyout-closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <span>
    Default (Optional)
  </span>
  <i
    className="icon-chevron-down"
  />
</div>
`;

exports[`Progress widgets requirement control test Default (required) 1`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger require-control-value require-control flyout-closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <span>
    Default (Required)
  </span>
  <i
    className="icon-chevron-down"
  />
</div>
`;

exports[`Progress widgets requirement control test Optional 1`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger require-control-value require-control flyout-closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <span>
    Optional
  </span>
  <i
    className="icon-chevron-down"
  />
</div>
`;

exports[`Progress widgets requirement control test Required 1`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger require-control-value require-control flyout-closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <span>
    Required
  </span>
  <i
    className="icon-chevron-down"
  />
</div>
`;
